{
  "version": 4,
  "terraform_version": "1.1.2",
  "serial": 344,
  "lineage": "70e67dd6-4adf-9753-d38b-d35d7834f89c",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c6b1d09930fac512",
            "arn": "arn:aws:ec2:us-east-1:211108891857:instance/i-0405aa81ade3fcb98",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0405aa81ade3fcb98",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "NVec2key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0dcb5c27fba95fae1",
            "private_dns": "ip-10-10-1-22.ec2.internal",
            "private_ip": "10.10.1.22",
            "public_ip": "54.90.64.94",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00f39e8324cf0c1a1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f024ddf7e4cabc93",
            "tags": {
              "Name": "Bastion_Neo"
            },
            "tags_all": {
              "Name": "Bastion_Neo"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-013c43760bb99f210"
            ]
          },
          "dependencies": [
            "module.vpc.aws_security_group.bastion_ssh_all_sg_neo",
            "module.vpc.aws_subnet.publicsubnet1",
            "module.vpc.aws_vpc.neo_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.elb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "albweb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:211108891857:loadbalancer/app/Web-Application-Load-Balancer/f5d489f85a4c01c5",
            "arn_suffix": "app/Web-Application-Load-Balancer/f5d489f85a4c01c5",
            "desync_mitigation_mode": "defensive",
            "dns_name": "Web-Application-Load-Balancer-781439743.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:211108891857:loadbalancer/app/Web-Application-Load-Balancer/f5d489f85a4c01c5",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Web-Application-Load-Balancer",
            "security_groups": [
              "sg-0c98d118005e14c2c"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00a3cd43bc20ecffe"
              },
              {
                "subnet_id": "subnet-0f024ddf7e4cabc93"
              }
            ],
            "subnets": [
              "subnet-00a3cd43bc20ecffe",
              "subnet-0f024ddf7e4cabc93"
            ],
            "tags": {
              "Environment": "External Application Load Balancer"
            },
            "tags_all": {
              "Environment": "External Application Load Balancer"
            },
            "vpc_id": "vpc-0a055089d5a93a2c7",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.vpc.aws_security_group.external_alb_sg",
            "module.vpc.aws_subnet.publicsubnet1",
            "module.vpc.aws_subnet.publicsubnet2",
            "module.vpc.aws_vpc.neo_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.elb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "netlbapp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:211108891857:loadbalancer/net/App-Network-Load-Balancer/46f447ec1dbf2ae9",
            "arn_suffix": "net/App-Network-Load-Balancer/46f447ec1dbf2ae9",
            "dns_name": "App-Network-Load-Balancer-46f447ec1dbf2ae9.elb.us-east-1.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:211108891857:loadbalancer/net/App-Network-Load-Balancer/46f447ec1dbf2ae9",
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "App-Network-Load-Balancer",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0640747b6bb1c2985"
              },
              {
                "subnet_id": "subnet-0c844c4ca1f933257"
              }
            ],
            "subnets": [
              "subnet-0640747b6bb1c2985",
              "subnet-0c844c4ca1f933257"
            ],
            "tags": {
              "Environment": "INTERNAL Network Load Balancer"
            },
            "tags_all": {
              "Environment": "INTERNAL Network Load Balancer"
            },
            "vpc_id": "vpc-0a055089d5a93a2c7",
            "zone_id": "Z26RNL4JYFTOTI"
          },
          "dependencies": [
            "module.vpc.aws_vpc.neo_vpc",
            "module.vpc.aws_subnet.privatesubnet3",
            "module.vpc.aws_subnet.privatesubnet4"
          ]
        }
      ]
    },
    {
      "module": "module.elb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "external_listner_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:211108891857:listener/app/Web-Application-Load-Balancer/f5d489f85a4c01c5/070d908746d3ba7f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:211108891857:targetgroup/IP-lb-instancetype-tg/cd7c855b550aa854",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:211108891857:listener/app/Web-Application-Load-Balancer/f5d489f85a4c01c5/070d908746d3ba7f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:211108891857:loadbalancer/app/Web-Application-Load-Balancer/f5d489f85a4c01c5",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.elb.aws_lb_target_group.tg",
            "module.vpc.aws_security_group.external_alb_sg",
            "module.vpc.aws_subnet.publicsubnet1",
            "module.vpc.aws_subnet.publicsubnet2",
            "module.vpc.aws_vpc.neo_vpc",
            "module.elb.aws_lb.albweb"
          ]
        }
      ]
    },
    {
      "module": "module.elb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "internal_listener_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:211108891857:listener/net/App-Network-Load-Balancer/46f447ec1dbf2ae9/2017172613b5e42b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:211108891857:targetgroup/IP-lb-instancetype-internal-tg/4ac59fd5f17b7137",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:211108891857:listener/net/App-Network-Load-Balancer/46f447ec1dbf2ae9/2017172613b5e42b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:211108891857:loadbalancer/net/App-Network-Load-Balancer/46f447ec1dbf2ae9",
            "port": 3000,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.elb.aws_lb.netlbapp",
            "module.elb.aws_lb_target_group.internaltg",
            "module.vpc.aws_subnet.privatesubnet3",
            "module.vpc.aws_subnet.privatesubnet4",
            "module.vpc.aws_vpc.neo_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.elb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "internaltg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:211108891857:targetgroup/IP-lb-instancetype-internal-tg/4ac59fd5f17b7137",
            "arn_suffix": "targetgroup/IP-lb-instancetype-internal-tg/4ac59fd5f17b7137",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:211108891857:targetgroup/IP-lb-instancetype-internal-tg/4ac59fd5f17b7137",
            "lambda_multi_value_headers_enabled": false,
            "name": "IP-lb-instancetype-internal-tg",
            "port": 3000,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0a055089d5a93a2c7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.neo_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.elb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:211108891857:targetgroup/IP-lb-instancetype-tg/cd7c855b550aa854",
            "arn_suffix": "targetgroup/IP-lb-instancetype-tg/cd7c855b550aa854",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:211108891857:targetgroup/IP-lb-instancetype-tg/cd7c855b550aa854",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "IP-lb-instancetype-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0a055089d5a93a2c7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.neo_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "natgweip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d71e3df7823b5dfa",
            "association_id": "eipassoc-0a81a427049890144",
            "domain": "vpc",
            "id": "eipalloc-0d71e3df7823b5dfa",
            "network_border_group": "us-east-1",
            "network_interface": "eni-07e2538d679ffd721",
            "private_dns": "ip-10-10-2-59.ec2.internal",
            "private_ip": "10.10.2.59",
            "public_dns": "ec2-34-237-84-138.compute-1.amazonaws.com",
            "public_ip": "34.237.84.138",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211108891857:internet-gateway/igw-0ef88135638b404d9",
            "id": "igw-0ef88135638b404d9",
            "owner_id": "211108891857",
            "tags": {
              "Name": "Internet Gatway Neo"
            },
            "tags_all": {
              "Name": "Internet Gatway Neo"
            },
            "vpc_id": "vpc-0a055089d5a93a2c7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.neo_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d71e3df7823b5dfa",
            "connectivity_type": "public",
            "id": "nat-0c6a994ddb95bd214",
            "network_interface_id": "eni-07e2538d679ffd721",
            "private_ip": "10.10.2.59",
            "public_ip": "34.237.84.138",
            "subnet_id": "subnet-00a3cd43bc20ecffe",
            "tags": {
              "Name": "NAT gw"
            },
            "tags_all": {
              "Name": "NAT gw"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.natgweip",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_subnet.publicsubnet2",
            "module.vpc.aws_vpc.neo_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211108891857:route-table/rtb-01b2f540e8199fa3c",
            "id": "rtb-01b2f540e8199fa3c",
            "owner_id": "211108891857",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c6a994ddb95bd214",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private Route_Neo"
            },
            "tags_all": {
              "Name": "Private Route_Neo"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a055089d5a93a2c7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_nat_gateway.natgw",
            "module.vpc.aws_subnet.publicsubnet2",
            "module.vpc.aws_vpc.neo_vpc",
            "module.vpc.aws_eip.natgweip",
            "module.vpc.aws_internet_gateway.gw"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211108891857:route-table/rtb-044c85cf6b8a61327",
            "id": "rtb-044c85cf6b8a61327",
            "owner_id": "211108891857",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ef88135638b404d9",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Route_Neo"
            },
            "tags_all": {
              "Name": "Public Route_Neo"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a055089d5a93a2c7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_vpc.neo_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eb143429a3fcdaa4",
            "route_table_id": "rtb-01b2f540e8199fa3c",
            "subnet_id": "subnet-0c844c4ca1f933257"
          },
          "dependencies": [
            "module.vpc.aws_nat_gateway.natgw",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.privatesubnet3",
            "module.vpc.aws_subnet.publicsubnet2",
            "module.vpc.aws_vpc.neo_vpc",
            "module.vpc.aws_eip.natgweip",
            "module.vpc.aws_internet_gateway.gw"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b1bf08f0ca69062b",
            "route_table_id": "rtb-01b2f540e8199fa3c",
            "subnet_id": "subnet-0640747b6bb1c2985"
          },
          "dependencies": [
            "module.vpc.aws_vpc.neo_vpc",
            "module.vpc.aws_eip.natgweip",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_nat_gateway.natgw",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.privatesubnet4",
            "module.vpc.aws_subnet.publicsubnet2"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04bf20c6ae69a0176",
            "route_table_id": "rtb-044c85cf6b8a61327",
            "subnet_id": "subnet-0f024ddf7e4cabc93"
          },
          "dependencies": [
            "module.vpc.aws_vpc.neo_vpc",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.publicsubnet1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05602417f3439a25d",
            "route_table_id": "rtb-044c85cf6b8a61327",
            "subnet_id": "subnet-00a3cd43bc20ecffe"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.publicsubnet2",
            "module.vpc.aws_vpc.neo_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_ssh_all_sg_neo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211108891857:security-group/sg-013c43760bb99f210",
            "description": "Allow SSH from Anywhere",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-013c43760bb99f210",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion_ssh_all_sg_neo",
            "name_prefix": "",
            "owner_id": "211108891857",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Bastion Allow All_Neo"
            },
            "tags_all": {
              "Name": "Bastion Allow All_Neo"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a055089d5a93a2c7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.neo_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_ssh_from_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211108891857:security-group/sg-0d2478da745119e97",
            "description": "Allow SSH from Bastion Host",
            "egress": [],
            "id": "sg-0d2478da745119e97",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-013c43760bb99f210",
                  "sg-0cd695cd9222e97ed"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ssh_from_bastion_nat",
            "name_prefix": "",
            "owner_id": "211108891857",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a055089d5a93a2c7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_subnet.privatesubnet4",
            "module.vpc.aws_vpc.neo_vpc",
            "module.vpc.aws_security_group.bastion_ssh_all_sg_neo",
            "module.vpc.aws_security_group.web_from_nat_prv_sg",
            "module.vpc.aws_subnet.privatesubnet3"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "databasesg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211108891857:security-group/sg-062097bcccaf204d8",
            "description": "Allow Web Access to RDS MySQL",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-062097bcccaf204d8",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.10.3.0/24"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "10.10.3.0/24"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "10.10.4.0/24"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "10.10.4.0/24"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "database_security_group",
            "name_prefix": "",
            "owner_id": "211108891857",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "RDS MySQL Security Group"
            },
            "tags_all": {
              "Name": "RDS MySQL Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a055089d5a93a2c7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_subnet.privatesubnet3",
            "module.vpc.aws_subnet.privatesubnet4",
            "module.vpc.aws_vpc.neo_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "external_alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211108891857:security-group/sg-0c98d118005e14c2c",
            "description": "Allow port 80 from Anywhere",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c98d118005e14c2c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "external_alb_sg",
            "name_prefix": "",
            "owner_id": "211108891857",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "External Load Balancer Security Group"
            },
            "tags_all": {
              "Name": "External Load Balancer Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a055089d5a93a2c7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.neo_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "internal_alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211108891857:security-group/sg-0beac653ac8a92ace",
            "description": "Allow port 3000 from Private",
            "egress": [
              {
                "cidr_blocks": [
                  "10.10.3.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "10.10.4.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0beac653ac8a92ace",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.10.3.0/24"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "10.10.4.0/24"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "internal_alb_sg",
            "name_prefix": "",
            "owner_id": "211108891857",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Internal Load Balancer Security Group"
            },
            "tags_all": {
              "Name": "Internal Load Balancer Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a055089d5a93a2c7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.neo_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_from_nat_prv_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211108891857:security-group/sg-0cd695cd9222e97ed",
            "description": "Allow Web Access to Private Subnet from NAT Instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cd695cd9222e97ed",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.10.3.0/24"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "10.10.3.0/24"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.10.3.0/24"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.10.4.0/24"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "10.10.4.0/24"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.10.4.0/24"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "private_subnet_web_access",
            "name_prefix": "",
            "owner_id": "211108891857",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Private Subnet Web Access From NAT"
            },
            "tags_all": {
              "Name": "Private Subnet Web Access From NAT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a055089d5a93a2c7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_subnet.privatesubnet3",
            "module.vpc.aws_subnet.privatesubnet4",
            "module.vpc.aws_vpc.neo_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_from_nat_pub_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211108891857:security-group/sg-0c79dbb73f7485cdc",
            "description": "Allow Web Access to Private Subnet from Public Subnet via NAT Instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c79dbb73f7485cdc",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.10.1.0/24"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "10.10.1.0/24"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.10.1.0/24"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.10.2.0/24"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "10.10.2.0/24"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.10.2.0/24"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "public_subnet_web_access",
            "name_prefix": "",
            "owner_id": "211108891857",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Public Subnet Web Access via NAT"
            },
            "tags_all": {
              "Name": "Public Subnet Web Access via NAT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a055089d5a93a2c7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_subnet.publicsubnet1",
            "module.vpc.aws_subnet.publicsubnet2",
            "module.vpc.aws_vpc.neo_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_outbound_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211108891857:security-group/sg-06111afaa6d5a7d63",
            "description": "Allow Outbound Connections",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06111afaa6d5a7d63",
            "ingress": [],
            "name": "web_outbound",
            "name_prefix": "",
            "owner_id": "211108891857",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a055089d5a93a2c7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.neo_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privatesubnet3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211108891857:subnet/subnet-0c844c4ca1f933257",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c844c4ca1f933257",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211108891857",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet-3_Neo"
            },
            "tags_all": {
              "Name": "Private Subnet-3_Neo"
            },
            "vpc_id": "vpc-0a055089d5a93a2c7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.neo_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privatesubnet4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211108891857:subnet/subnet-0640747b6bb1c2985",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.10.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0640747b6bb1c2985",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211108891857",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet-4_Neo"
            },
            "tags_all": {
              "Name": "Private Subnet-4_Neo"
            },
            "vpc_id": "vpc-0a055089d5a93a2c7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.neo_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicsubnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211108891857:subnet/subnet-0f024ddf7e4cabc93",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f024ddf7e4cabc93",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211108891857",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet-1_Neo"
            },
            "tags_all": {
              "Name": "Public Subnet-1_Neo"
            },
            "vpc_id": "vpc-0a055089d5a93a2c7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.neo_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicsubnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211108891857:subnet/subnet-00a3cd43bc20ecffe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00a3cd43bc20ecffe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211108891857",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet-2_Neo"
            },
            "tags_all": {
              "Name": "Public Subnet-2_Neo"
            },
            "vpc_id": "vpc-0a055089d5a93a2c7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.neo_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "neo_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211108891857:vpc/vpc-0a055089d5a93a2c7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0c2eeda4c2e3087ab",
            "default_route_table_id": "rtb-048c34af7ea66db66",
            "default_security_group_id": "sg-02d528793b1b0b39a",
            "dhcp_options_id": "dopt-0b575471",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0a055089d5a93a2c7",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-048c34af7ea66db66",
            "owner_id": "211108891857",
            "tags": {
              "Name": "Neo VPC"
            },
            "tags_all": {
              "Name": "Neo VPC"
            }
          }
        }
      ]
    }
  ]
}